banner and description on mobile were fixed

--- a/themes/connect-your-home/css/marketing.css
+++ b/themes/connect-your-home/css/marketing.css
@@ -159,7 +159,7 @@ section {
   text-align: center;
   text-transform: uppercase;
   letter-spacing: 1.4px;
-  width: 50%; }
+  width: 85%; }
 
 .inner-text {
   text-align: center;
@@ -167,7 +167,7 @@ section {
   font-size: 14px;
   line-height: 28px;
   letter-spacing: 1.2px;
-  width: 40%;
+  width: 65%;
   margin-bottom: 3vh;
   font-weight: 500; }
 
@@ -178,7 +178,7 @@ section {
   background-position: center center;
   background-size: cover;
   position: relative;
-  height: 500px;
+  max-height: 500px;
   padding: 0; }
   .intro-section .darken-bg {
     content: '';
@@ -203,10 +203,9 @@ section {
     -webkit-box-pack: justify;
         -ms-flex-pack: justify;
             justify-content: space-between;
-    height: 500px;
-    padding-top: 15vh;
+    padding-top: 7vh;
     padding-bottom: 2vh;
-    position: absolute;
+    position: relative;
     z-index: 1;
     margin: 0 auto;
     left: 0;
@@ -548,6 +547,14 @@ p.not-found-items {
 
 .providers-table.mobile {
   display: none; }
+  .providers-table.mobile .slide-cell .middle-text {
+    display: block;
+    position: relative;
+    padding-right: 15px;
+    float: left;
+    width: 100%; }
+  .providers-table.mobile .plan-description .plus-list {
+    padding-left: 0; }
 
 .offers-navigation {
   margin-bottom: 65px;
@@ -745,7 +752,7 @@ footer {
   .providers-table tbody > .hidden-row td {
     border-bottom: 0; }
   .intro-section .inner-block {
-    padding-top: 8vh;
+    padding-top: 3vh;
     padding-bottom: 0vh; }
   .inner-text {
     width: 75%; }
@@ -818,8 +825,6 @@ footer {
     letter-spacing: 1px; }
   .zip-code-form .form-group {
     display: inline-block; }
-  .intro-section .inner-block {
-    padding-top: 11vh; }
   .breadcrumb li a {
     font-size: 18px; }
   .offers-list-wrap {
@@ -830,7 +835,8 @@ footer {
     width: 70%;
     margin: 0 auto; }
   .providers-table.tablet {
-    margin: 0px 0; }
+    margin: 0px 0;
+    margin-bottom: 20px; }
   .flex-list li, .flex-list li a {
     font-size: 22px;
     line-height: 45px;
@@ -943,10 +949,11 @@ footer {
     -webkit-transform: none;
             transform: none; }
   .providers-table {
-    margin: 0px 0; } }
+    margin: 0px 0;
+    margin-bottom: 20px; } }
 
 @media (max-width: 480px) {
-  h2 {
+  h2, .information-section h2 {
     font-size: 22px;
     line-height: 26px;
     width: 100%; }
@@ -954,16 +961,13 @@ footer {
     padding: 30px 0 55px 0; }
   .btn-green, .btn-orange {
     padding: 14px 25px; }
-  .inner-block {
-    padding: 0 15px; }
-    .inner-block .zip-code-form .form-inline {
-      display: block; }
-    .inner-block .zip-code-form .btn-green {
-      margin: 10px 0;
-      width: 180px;
-      display: block; }
+  .inner-block .zip-code-form .form-inline {
+    display: block; }
+  .inner-block .zip-code-form .btn-green {
+    margin: 10px 0;
+    width: 180px;
+    display: block; }
   .intro-section .inner-block {
-    padding-top: 0;
     -webkit-box-pack: center;
         -ms-flex-pack: center;
             justify-content: center; }
@@ -1017,9 +1021,7 @@ footer {
   .btn-orange.btn-big {
     min-width: 290px;
     max-width: 290px;
-    white-space: nowrap;
-    overflow: hidden;
-    text-overflow: ellipsis; }
+    white-space: pre-line; }
   .map {
     margin-bottom: 20px; }
   .flex-list li, .flex-list li a {
